新增一个接口
