# swagger/center.json
@@ -412,7 +412,7 @@
         "tags": [
           "OKR 内核"
         ],
-        "summary": "创建一个core",
+        "summary": "创建一个OKR",
         "operationId": "createOkrUsingGET",
         "parameters": [
           {
@@ -426,20 +426,19 @@
             }
           },
           {
-            "name": "teamOkrId",
+            "name": "secret",
             "in": "query",
-            "description": "团队 OKR ID",
+            "description": "邀请密钥",
             "required": false,
             "style": "form",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           },
           {
-            "name": "teamPersonalOkrId",
+            "name": "teamOkrId",
             "in": "query",
-            "description": "团队个人 OKR ID",
+            "description": "团队 OKR ID",
             "required": false,
             "style": "form",
             "schema": {
@@ -524,7 +523,7 @@
         }
       }
     },
-    "/core/summary/{id}": {
+    "/core/summary": {
       "post": {
         "tags": [
           "OKR 内核"
@@ -1401,6 +1400,52 @@
         }
       }
     },
+    "/teampersonal/members/{teamId}": {
+      "post": {
+        "tags": [
+          "团队个人 OKR 测试接口"
+        ],
+        "summary": "获取团队成员列表",
+        "operationId": "getTeamMemberUsingPOST",
+        "parameters": [
+          {
+            "name": "teamId",
+            "in": "path",
+            "description": "团队 OKR ID",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/统一响应«List«团队成员数据»»"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/thirdquadrant/init": {
       "post": {
         "tags": [
@@ -1834,7 +1879,7 @@
         "properties": {
           "average": {
             "type": "number",
-            "description": "均值",
+            "description": "（关键结果完成概率）均值",
             "format": "double"
           },
           "coreId": {
@@ -1846,6 +1891,11 @@
             "type": "string",
             "description": "创建时间",
             "format": "date-time"
+          },
+          "degree": {
+            "type": "integer",
+            "description": "完成度",
+            "format": "int32"
           },
           "id": {
             "type": "integer",
@@ -1957,6 +2007,38 @@
             "type": "string",
             "description": "更新时间",
             "format": "date-time"
+          }
+        }
+      },
+      "团队成员数据": {
+        "title": "团队成员数据",
+        "type": "object",
+        "properties": {
+          "createTime": {
+            "type": "string",
+            "description": "加入时间",
+            "format": "date-time"
+          },
+          "email": {
+            "type": "string",
+            "description": "邮箱"
+          },
+          "nickname": {
+            "type": "string",
+            "description": "昵称"
+          },
+          "phone": {
+            "type": "string",
+            "description": "手机号"
+          },
+          "photo": {
+            "type": "string",
+            "description": "头像"
+          },
+          "userId": {
+            "type": "integer",
+            "description": "用户 ID",
+            "format": "int64"
           }
         }
       },
@@ -2251,6 +2333,28 @@
             "description": "具体数据",
             "items": {
               "$ref": "#/components/schemas/团队个人 OKR 部分数据"
+            }
+          },
+          "message": {
+            "type": "string",
+            "description": "描述语"
+          }
+        }
+      },
+      "统一响应«List«团队成员数据»»": {
+        "title": "统一响应«List«团队成员数据»»",
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "状态码",
+            "format": "int32"
+          },
+          "data": {
+            "type": "array",
+            "description": "具体数据",
+            "items": {
+              "$ref": "#/components/schemas/团队成员数据"
             }
           },
           "message": {
